--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/legacy-factories": "^1.1",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "laraveles/spanish": "^1.5",
         "spatie/laravel-permission": "^3.18",
         "tightenco/ziggy": "^0.9.4"
     },
